# command-line-tool-client

./: .flake8  .gitignore  .isort.cfg  CHANGELOG.md  README.md  bootstrap.py  pyproject.toml  requirements.txt  run-tac-command  run-tac-command.sh  setup.py  setup.sh  soteri-security.yml  validation.sh
automated_process/: create_server_cluster.py
automation/: automation_core.py  core.py  create_authorization.py  create_project.py  create_server_cluster.py  create_user_group.py  delete_project.py  delete_user_group.py
automation/command/: __init__.py  add_users_to_group.py  create_authorization.py  create_cluster_authorization.py  create_project.py  create_server_cluster.py  create_user_group.py  delete_authorization.py  delete_cluster_authorization.py  delete_jvmparam.py  delete_project.py  delete_user.py  delete_user_group.py  delete_users_from_group.py  remove_server_cluster.py  set_license_key.py  update_tac_settings.py  update_task.py  update_task_jvmparam.py  update_user.py
automation/tools/: local_server_cluster_managment.py
metaservlet/: api.py  core.py  error_codes.py
metaservlet/api/: tasks.py  (+6 more)
settings/: constant.py  credentials.py  environment.py  logger_config.py
tac_scrapper/: update_settings_example.py
test/: self-test.py  self_test.py  test_bitbucket.py  test_files_csv.py  test_metaservlet.py  test_scrapper.py
test_tac_automation/: self_test.py  test_bitbucket.py  test_decrypt.py  test_files_csv.py
utilities/: bitbucket_files_management.py  cipher.py  encryption.py  files_management.py  files_managment.py  remote_conexion.py  sso_token.py
(+2 files in other folders)
