[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "command-line-tool-client"
description = "Command Line Tool Client"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6.8"
authors = [{ name = "Tu Nombre", email= "<tu.email@example.com>" }]
dependencies = [
"shortuuid (==1.0.13)",
"pandas==1.1.5",
"requests==2.27.1",
"dotenv==0.9.9",
# dev dependency, relocation in dev section.
"flake8 (==5.0.4)",
"flake8-isort (==4.2.0)",
"isort (==4.3.21)",
"mypy (==0.971)",
"setuptools (==50)",
]
